# landingPage

./: Dockerfile  README.md
.github/workflows/: tests.yaml
landing/: Cargo.toml
landing/migrations/: 0001_initial_setup.up.sql
landing/src/: lib.rs  main.rs  server.rs
landing/src/components/: login.rs  logout_button.rs  mod.rs  navbar.rs  post_form.rs  protected.rs
landing/src/components/auth/: callback.rs  logout.rs  mod.rs
landing/src/components/ui/: button.rs  card.rs  inline_form.rs  input.rs  mod.rs
landing/src/db/: connection.rs  errors.rs  mod.rs  models.rs  postgres.rs  queries.rs
landing/src/db/queries/: session.rs  users.rs
landing/src/server/: context.rs  error.rs  mod.rs  models.rs  postgres.rs  provider.rs  utils.rs
landing/src/server/auth/: context.rs  middleware.rs  mod.rs  utils.rs
landing/src/types/: lib.rs
landing/src/views/: blog.rs  callback.rs  mod.rs  not_found.rs  routes.rs
tests/auth/: mod.rs  user_tests.rs
