[package]
name = "landing"
version = "0.1.0"
authors = ["Youknowwho55 <dylan9112@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
serde = "1.0.219"
dioxus-hooks = "0.6.2"
thiserror = "2.0.12"
bcrypt = "0.17"
#sqlx
postgres = { version = "0.19", features = ["with-uuid-1"] }
web-sys = { version = "0.3.77", features = ["Window", "Document"] }  # Add needed features

uuid = { version = "1.3", features = ["serde","v4"] }
rand = "0.9"
chrono = {version="0.4", features = ["serde"]}
base64 = "0.22.1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio-native-tls", "migrate", "uuid", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"  # For environment variables
serde_urlencoded = "0.7.1"
anyhow = "1.0.97"
async-trait = "0.1.88"
log = "0.4.27"
clap = {version = "4.5.35", features = ["derive"]}


[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3", features = ["Window", "Storage"] }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
keyring = "3.6.2"  # For secure credential storage on desktop

[[bin]]
name = "admin"
path = "src/bin/admin.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"
required-features = ["web"]

[[bin]]
name = "server"
path = "src/bin/server.rs"